Update pom files with Fuse versions

--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
   The ASF licenses this file to You under the Apache License, Version 2.0
   (the "License"); you may not use this file except in compliance with
   the License.  You may obtain a copy of the License at
-  
+
   http://www.apache.org/licenses/LICENSE-2.0
-  
+
   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,19 +18,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <description>Proton is a library for speaking AMQP.</description>
   <parent>
-    <groupId>org.apache</groupId>
-    <artifactId>apache</artifactId>
-    <version>12</version>
+    <groupId>org.fusesource</groupId>
+    <artifactId>fusesource-pom</artifactId>
+    <version>1.10</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.apache.qpid</groupId>
   <artifactId>proton-project</artifactId>
-  <!-- We use a static 1.0-SNAPSHOT version so that dependent projects
-       requiring the latest trunk build can use an unchanging value in their pom.xml.
-       We will use a more representative version if and when snapshots from multiple
-       branches are being concurrently produced. -->
-  <version>1.0-SNAPSHOT</version>
+  <version>0.8.redhat-001-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
