--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
     <junit-version>4.10</junit-version>
   </properties>
 
+  <prerequisites>
+    <maven>3.2.1</maven>
+  </prerequisites>
+
   <distributionManagement>
     <site>
       <id>proton-site-id</id>
@@ -70,6 +74,18 @@
           <outputEncoding>UTF-8</outputEncoding>
           <siteDirectory>docs</siteDirectory>
         </configuration>
+      </plugin>
+
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.4.2</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.scm</groupId>
+            <artifactId>maven-scm-provider-gitexe</artifactId>
+            <version>1.8.1</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
