--- a/contrib/proton-jms/pom.xml
+++ b/contrib/proton-jms/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>org.apache.qpid</groupId>
     <artifactId>proton-project</artifactId>
-    <version>0.8.redhat-001</version>
+    <version>0.8.redhat-002-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -45,7 +45,7 @@
   </build>
   <scm>
     <url>http://svn.apache.org/viewvc/qpid/proton/</url>
-    <tag>proton-project-0.8.redhat-001</tag>
+    <tag>HEAD</tag>
   </scm>
 
 </project>
